sass/src/pleiades.scss
/* ... */
p.error em {
	font-weight: normal;
	line-height: 140%;
}
.notice {
	color: #000;
	display: block;
	font-size: 120%;
	padding: 0.8em;
	margin: 1em 0;
}
.success {
	color: #fff;
}

/**  Actions  **/
.actions ul {
	margin: 0;
	padding: 0;
}
.actions li {
	margin:0 0 0.5em 0;
	list-style-type: none;
	white-space: nowrap;
	padding: 0;
}

/* Buttons and button links */
.actions ul li a,
.actions a {
  @include button($grey4);
}

input[type=submit] {
  @include button($green);
  font-family: inherit;
}

/** Related **/
.related {
	clear: both;
	display: block;
}

/** Debugging **/
pre {
  padding: 1em;
  border: 1px solid $grey4;
  overflow-x: auto;
}

.cake-debug-output {
	padding: 0;
	position: relative;
}
.cake-debug-output > span {
	position: absolute;
	top: 5px;
	right: 5px;
	background: rgba(255, 255, 255, 0.3);
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	padding: 5px 6px;
	color: #000;
	display: block;
	float: left;
	-moz-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.25), 0 1px 0 rgba(255, 255, 255, 0.5);
	-webkit-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.25), 0 1px 0 rgba(255, 255, 255, 0.5);
	box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.25), 0 1px 0 rgba(255, 255, 255, 0.5);
	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.8);
}
.cake-debug,
.cake-error {
	font-size: 16px;
	line-height: 20px;
	clear: both;
}
.cake-error > a {
	text-shadow: none;
}
.cake-error {
	white-space: normal;
}
.cake-stack-trace {
	background: rgba(255, 255, 255, 0.7);
	color: $grey4;
	margin: 10px 0 5px 0;
	padding: 10px 10px 0 10px;
	font-size: 120%;
	line-height: 140%;
	overflow: auto;
	position: relative;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
}
.cake-stack-trace a {
	text-shadow: none;
	background: rgba(255, 255, 255, 0.7);
	padding: 5px;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
	border-radius: 10px;
	margin: 0px 4px 10px 2px;
	font-family: sans-serif;
	font-size: 14px;
	line-height: 14px;
	display: inline-block;
	text-decoration: none;
	-moz-box-shadow: inset 0px 1px 0 rgba(0, 0, 0, 0.3);
	-webkit-box-shadow: inset 0px 1px 0 rgba(0, 0, 0, 0.3);
	box-shadow: inset 0px 1px 0 rgba(0, 0, 0, 0.3);
}
.cake-code-dump pre {
	position: relative;
	overflow: auto;
}
.cake-context {
	margin-bottom: 10px;
}
.cake-stack-trace pre {
	color: #000;
	background-color: #F0F0F0;
	margin: 0px 0 10px 0;
	padding: 1em;
	overflow: auto;
	text-shadow: none;
}
.cake-stack-trace li {
	padding: 10px 5px 0px;
	margin: 0 0 4px 0;
	font-family: monospace;
	border: 1px solid #bbb;
	-moz-border-radius: 4px;
	-wekbkit-border-radius: 4px;
	border-radius: 4px;
	background: #dcdcdc;
	background-image: -webkit-gradient(linear, left top, left bottom, from(#fefefe), to(#dcdcdc));
	background-image: -webkit-linear-gradient(top, #fefefe, #dcdcdc);
	background-image: -moz-linear-gradient(top, #fefefe, #dcdcdc);
	background-image: -ms-linear-gradient(top, #fefefe, #dcdcdc);
	background-image: -o-linear-gradient(top, #fefefe, #dcdcdc);
	background-image: linear-gradient(top, #fefefe, #dcdcdc);
}
/* excerpt */
.cake-code-dump pre,
.cake-code-dump pre code {
	clear: both;
	font-size: 12px;
	line-height: 15px;
	margin: 4px 2px;
	padding: 4px;
	overflow: auto;
}
.cake-code-dump .code-highlight {
	display: block;
	background-color: rgba(255, 255, 0, 0.5);
}
.code-coverage-results div.code-line {
	padding-left:5px;
	display:block;
	margin-left:10px;
}
.code-coverage-results div.uncovered span.content {
	background:#ecc;
}
.code-coverage-results div.covered span.content {
	background:#cec;
}
.code-coverage-results div.ignored span.content {
	color:#aaa;
}
.code-coverage-results span.line-num {
	color:#666;
	display:block;
	float:left;
	width:20px;
	text-align:right;
	margin-right:5px;
}
.code-coverage-results span.line-num strong {
	color:#666;
}
.code-coverage-results div.start {
	border:1px solid #aaa;
	border-width:1px 1px 0px 1px;
	margin-top:30px;
	padding-top:5px;
}
.code-coverage-results div.end {
	border:1px solid #aaa;
	border-width:0px 1px 1px 1px;
	margin-bottom:30px;
	padding-bottom:5px;
}
.code-coverage-results div.realstart {
	margin-top:0px;
}
.code-coverage-results p.note {
	color:#bbb;
	padding:5px;
	margin:5px 0 10px;
	font-size:10px;
}
.code-coverage-results span.result-bad {
	color: #a00;
}
.code-coverage-results span.result-ok {
	color: #fa0;
}
.code-coverage-results span.result-good {
	color: #0a0;
}

/** Elements **/
#url-rewriting-warning {
	display:none;
}

#menu {
  float: right;
}

#navmenu {
  display: inline-block;
  text-align: right;
  font-size: 1em;
  font-weight: bold;
  height: $headerHeight;
  line-height: $headerHeight;
}

#navmenu a {
  text-decoration: none;
  text-shadow: 0 2px 0 $grey4;
  color: $greyE;
  margin-left: .5em;
  @include transition (top 0.1s ease-in-out, text-shadow 0.1s);
}

#navmenu a:hover {
  color: $white;
}

#navmenu a:active {
  position: relative;
  top: 2px;
  text-shadow: none;
}

div.rating {
  float: right;
}

pre.submission {
  max-height: none;
  overflow-y: scroll;
  display: none;
}

.byline {
  text-shadow: 0 1px 1px $grey1;
  font-size: 18px;
  font-family: sans-serif;
  color: $grey9;
  float: left;

  .name {
    font-size: 35px;
    color: $white;
  }

  .author {
  }
}

.level_description {
  padding: 1em;
  white-space: pre-line;
}

.submission-wrapper {
  .submission-link {
    font-family: monospace;
    color: white;
  }
}

.submission {
  text-align: left;
}

.buttonDiv {
  position: relative;
  height: 0;
  top: 7.5px;
  right: 30px;
  display: block;
}

.codeButton {
  display: block;
}

.tags, .small-tags {
  padding: 0;
  list-style: none;
}

ul.tags {
  padding: 0;
}

.tags {
  input, .input {
    margin-bottom: 0;
  }
}

li.tag, .tags .checkbox {
  @include rounded;
  background: $grey2;
  border: 1px solid $grey8;
  clear: none;
  display: inline-block;
  box-shadow: 0 1px $grey4, 0 2px 3px $black;
  margin: 7px 14px 0 0;
}

li.tag {
  list-style: none;
}
/* ... */

